--- a/style.css
+++ b/style.css
@@ -3,20 +3,20 @@ body{
 }
 .container {
     display: flex;
-    flex-direction: column;
     align-items: center;
+    flex-direction: column;
     padding: 10px;
     border: 1px solid #ddd;
     border-radius: 15px;
     margin: 0 auto;
-    width: 200px;
+    max-width: 13rem;
     background-color: hsl(0, 0%, 100%);
-    align-content: center;
     box-shadow: 2px 2px 20px rgb(110, 107, 107);
   }
   
   .text {
-    margin-top: 10px;
+    margin-top: 0;
+    margin-bottom: 0;
     text-align: center;
     font-weight: 700px;
     font-family: Outfit;
@@ -25,6 +25,8 @@ body{
     color: hsl(218, 44%, 22%);
   }
   .para{
+    margin-top: 0;
+    margin-bottom: 0;
     text-align: center;
     color: hsl(220, 15%, 55%);
     font-size: 15px;
